Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/vitis_hls.log
INFO: [HLS 200-10] Running 'C:/Xilinx/Vitis_HLS/2023.2/bin/unwrapped/win64.o/vitis_hls.exe'
INFO: [HLS 200-10] For user 'kwokt' on host 'billy' (Windows NT_amd64 version 6.2) on Mon Apr 22 10:24:15 -0400 2024
INFO: [HLS 200-10] In directory 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder'
INFO: [HLS 200-2053] The vitis_hls executable is being deprecated. Consider using vitis-run --mode hls --tcl
Sourcing Tcl script 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_ap_uint_16bit/solution1/cosim.tcl'
INFO: [HLS 200-1510] Running: source C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_ap_uint_16bit/solution1/cosim.tcl
INFO: [HLS 200-1510] Running: open_project alu_ap_uint_16bit 
INFO: [HLS 200-10] Opening project 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_ap_uint_16bit'.
INFO: [HLS 200-1510] Running: set_top half_add_sub 
INFO: [HLS 200-1510] Running: add_files alu_ap_uint_16bit.cpp 
INFO: [HLS 200-10] Adding design file 'alu_ap_uint_16bit.cpp' to the project
INFO: [HLS 200-1510] Running: add_files alu_half_add-sub.hpp 
INFO: [HLS 200-10] Adding design file 'alu_half_add-sub.hpp' to the project
INFO: [HLS 200-1510] Running: add_files -tb tb_ap_uint_16bit.cpp -cflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'tb_ap_uint_16bit.cpp' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vivado 
INFO: [HLS 200-10] Opening solution 'C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_ap_uint_16bit/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xcvu11p-flga2577-1-e'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2023.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1464] Running solution command: config_cosim -tool=xsim
INFO: [HLS 200-1510] Running: set_part xcvu11p-flga2577-1-e 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1510] Running: config_cosim -tool xsim 
INFO: [HLS 200-1510] Running: source ./alu_ap_uint_16bit/solution1/directives.tcl
INFO: [HLS 200-1510] Running: set_directive_top -name half_add_sub half_add_sub 
INFO: [HLS 200-1510] Running: cosim_design 
INFO: [COSIM 212-47] Using XSIM for RTL simulation.
INFO: [COSIM 212-14] Instrumenting C test bench ...
   Build using "C:/Xilinx/Vitis_HLS/2023.2/tps/win64/msys64/mingw64/bin/g++"
   Compiling alu_ap_uint_16bit.cpp_pre.cpp.tb.cpp
   Compiling apatb_half_add_sub.cpp
   Compiling tb_ap_uint_16bit.cpp_pre.cpp.tb.cpp
cosim.tv.mk:77: recipe for target 'obj/tb_ap_uint_16bit.cpp_pre.cpp.tb.o' failed
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:150:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_fixed.h:9,
                 from apatb_half_add_sub.cpp:12:
C:/Xilinx/Vitis_HLS/2023.2/include/gmp.h:58:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_fixed.h:9,
                 from apatb_half_add_sub.cpp:12:
C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:142:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
In file included from C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/tb_ap_uint_16bit.cpp:2:0:
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:28: error: variable or field 'apatb_half_add_sub_sw' declared void
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:28: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:39: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:41: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:52: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:54: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:67: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:69: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:82: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:84: error: expected primary-expression before 'int'
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/tb_ap_uint_16bit.cpp: In function 'int main()':
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/tb_ap_uint_16bit.cpp:18:33: error: 'apatb_half_add_sub_sw' was not declared in this scope
         half_add_sub(A, B, sum, carry, 0); // 0 represents addition
                                 ^
make: *** [obj/tb_ap_uint_16bit.cpp_pre.cpp.tb.o] Error 1
ERROR: [COSIM 212-317] C++ compile error.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-321] EXE file generate failed.
ERROR: [COSIM 212-331] Aborting co-simulation: C simulation failed, compilation errors.
ERROR: [COSIM 212-5] *** C/RTL co-simulation file generation failed. ***
ERROR: [COSIM 212-4] *** C/RTL co-simulation finished: FAIL ***
INFO: [HLS 200-111] Finished Command cosim_design CPU user time: 1 seconds. CPU system time: 0 seconds. Elapsed time: 6.879 seconds; current allocated memory: 10.289 MB.
command 'ap_source' returned error code
    while executing
"source C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_ap_uint_16bit/solution1/cosim.tcl"
    invoked from within
"hls::main C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_ap_uint_16bit/solution1/cosim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
INFO: [HLS 200-112] Total CPU user time: 2 seconds. Total CPU system time: 1 seconds. Total elapsed time: 9.515 seconds; peak allocated memory: 208.816 MB.
